syntax = "proto3";

package proto_generated;

option java_package = "proto_generated";
option java_outer_classname = "PersonManagement";

//
// Request / Response
//

message SearchRequest {
  string lastname = 3;
}

message Person {
  int32 personId = 1;
  string firstname = 2;
  string lastname = 3;

}

message CreateReply {
  Person person = 1;
}

message SearchResponse {
  Person person = 1;
}


//
// Service
//

service PersonManagementService {
  rpc createPerson (Person) returns (CreateReply) {
  }
  rpc search (SearchRequest) returns (SearchResponse) {
  }
  rpc listAll (SearchRequest) returns (stream SearchResponse) {
  }
}
